render things conditionally with templates

--- a/templates/app/article_create.html
+++ b/templates/app/article_create.html
@@ -6,4 +6,4 @@
   <button type="submit">Save</button>
 </form>
 <a href="{% url 'home' %}">Back to list</a>
-{% endblock content %} {% endblock content %}
+{% endblock content %}
