--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -3,14 +3,24 @@
 
 <a href="{% url 'create_article' %}">Create article</a>
 
+<!-- <ul>
+  {% for article in articles %}
+  <li>
+    <a href="{% url 'update_article' article.id %}">{{ article.title }}</a> with
+    {{ article.word_count }} words.
+  </li>
+  {% endfor %}
+</ul> -->
+
+{% if articles %}
 <ul>
   {% for article in articles %}
-  <!-- <li>{{ article.title }} with {{ article.word_count }} words.</li> -->
   <li>
     <a href="{% url 'update_article' article.id %}">{{ article.title }}</a> with
     {{ article.word_count }} words.
   </li>
   {% endfor %}
 </ul>
-
-{% endblock content %}
+{% else %}
+<p>You have no articles yet.</p>
+{% endif %} {% endblock content %}
