--- a/templates/app/article_update.html
+++ b/templates/app/article_update.html
@@ -1,6 +1,7 @@
 {% extends "app/base.html" %} {% block content %}
 
 <h1>Edit Article</h1>
+<p>{{article.word_count}} word {{ article.word.count | pluralize }}.</p>
 <p>Last edited on {{ article.updated_at | date:"jS F Y" }}</p>
 <form method="POST">
   {% csrf_token %} {{ form.as_p }}
