add a markdown editor

--- a/templates/app/article_update.html
+++ b/templates/app/article_update.html
@@ -11,4 +11,14 @@
 <a href="{% url 'home' %}">Back to list</a>
 <a href="{% url 'delete_article' article.id %}">Delete article</a>
 
-{% endblock content %}
+{% endblock content %} {% block page_js %}
+<script>
+  const contentMarkdown = new EasyMDE({
+    element: document.getElementById("id_content"),
+    spellChecker: false,
+    status: false,
+    toolbar: false,
+    forceSync: true,
+  });
+</script>
+{% endblock page_js %}
