--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Djangocourse</title>
+    <link rel="stylesheet" href="{% static 'output.css' %}" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css"
@@ -11,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
   </head>
   <body>
-    <nav>
+    <nav class="px-10 py-4 border-b border-grey-300 shadow-md">
       <ul>
         <li><a href="{% url 'home' %}">Articles</a></li>
         <li>
