--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,13 +1,14 @@
 {% extends "app/base.html" %} {% load humanize %} {% block content %}
 <h1>Articles</h1>
 
-<a href="{% url 'create_article' %}">Create article</a>
-
 <p>
-  You have created {{ user.article_count | intcomma }} article{{
-  user.article_count | pluralize }} and written {{ user.written_words | intcomma
-  }} word{{ user.written_words | pluralize }}.
+  You have created {{ user.article_count|intcomma }} article
+  <!-- {{user.article_count|pluralize }} -->
+  and written {{ user.written_words|intcomma }} words
+  <!-- word{{user.written_words|pluralize }}.  -->
 </p>
+
+<a href="{% url 'create_article' %}">Create article</a>
 <!-- <ul>
   {% for article in articles %}
   <li>
