creating butotn styles

--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -20,10 +20,10 @@
           {% if user.is_authenticated %}
           <form method="POST" action="{% url 'account_logout' %}">
             {% csrf_token %}
-            <button type="submit">Log out</button>
+            <button class="button" type="submit">Log out</button>
           </form>
           {% else %}
-          <a href="{% url 'account_login' %}">Log in</a>
+          <a class="button" href="{% url 'account_login' %}">Log in</a>
           {% endif %}
         </li>
       </ul>
