--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -14,19 +14,26 @@
   </head>
   <body>
     <nav class="px-10 py-4 border-b border-grey-300 shadow-md">
-      <ul>
-        <li><a href="{% url 'home' %}">Articles</a></li>
-        <li>
-          {% if user.is_authenticated %}
-          <form method="POST" action="{% url 'account_logout' %}">
-            {% csrf_token %}
-            <button class="button" type="submit">Log out</button>
-          </form>
-          {% else %}
-          <a class="button" href="{% url 'account_login' %}">Log in</a>
-          {% endif %}
-        </li>
-      </ul>
+      <div class="flex justify-end items-center gap-6 max-w-7x mx-auto">
+        {% if user.is_authenticated %}
+        <a class="button primary" href="{% url 'create_article' %}"
+          >Create new</a
+        >
+        <a class="" href="{% url 'home' %}">Articles</a>
+        <a class="" href="{% url 'account_email' %}">Change email</a>
+        <form method="POST" action="{% url 'account_logout' %}">
+          {% csrf_token %}
+          <button type="submit">Log out</button>
+        </form>
+        {% else %}
+        <a class="button secondary text-sm" href="{% url 'account_login' %}"
+          >Log in</a
+        >
+        <a class="button primary text-sm" href="{% url 'account_signup' %}"
+          >Sign up</a
+        >
+        {% endif %}
+      </div>
     </nav>
     {% block content %} {% endblock content %}
     <footer>Common footer for all templates</footer>
