--- a/static/output.css
+++ b/static/output.css
@@ -895,3 +895,14 @@ select {
   --tw-ring-color: rgb(254 202 202 / var(--tw-ring-opacity, 1));
   --tw-ring-offset-width: 2px;
 }
+
+.hover\:shadow-underline:hover {
+  --tw-shadow: inset 0 -2px 0 0;
+  --tw-shadow-colored: inset 0 -2px 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-gray-300:hover {
+  --tw-shadow-color: #d1d5db;
+  --tw-shadow: var(--tw-shadow-colored);
+}
