--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -16,14 +16,27 @@
     <nav class="px-10 py-4 border-b border-grey-300 shadow-md">
       <div class="flex justify-end items-center gap-6 max-w-7x mx-auto">
         {% if user.is_authenticated %}
-        <a class="button primary" href="{% url 'create_article' %}"
+        <a class="button primary" href="{% url 'account_signup' %}"
           >Create new</a
         >
-        <a class="" href="{% url 'home' %}">Articles</a>
-        <a class="" href="{% url 'account_email' %}">Change email</a>
+        <a
+          class="hover:shadow-underline hover:shadow-gray-300"
+          href="{% url 'home' %}"
+          >Articles</a
+        >
+        <a
+          class="hover:shadow-underline hover:shadow-gray-300"
+          href="{% url 'account_email' %}"
+          >Change email</a
+        >
         <form method="POST" action="{% url 'account_logout' %}">
           {% csrf_token %}
-          <button type="submit">Log out</button>
+          <button
+            class="hover:shadow-underline hover:shadow-gray-300"
+            type="submit"
+          >
+            Log out
+          </button>
         </form>
         {% else %}
         <a class="button secondary text-sm" href="{% url 'account_login' %}"
