--- a/static/input.css
+++ b/static/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.title {
+  @apply text-6xl font-semibold tracking-tighter;
+}
+
 .button {
   @apply font-medium px-4 py-2 rounded-md;
 }
