--- a/templates/app/article_delete.html
+++ b/templates/app/article_delete.html
@@ -1,11 +1,33 @@
 {% extends "app/base.html" %} {% block content %}
 
-<h1>Delete Article</h1>
-<p>Are you sure you want to delete "{{ article.title }}"?</p>
-<form method="POST">
-  {% csrf_token %}
-  <button type="submit">Delete</button>
-</form>
+<main class="max-w-2xl mx-auto flex flex-col items-center mt-10">
+  <h1 class="subtitle mb-2">Delete Article</h1>
+  <p class="text-lg mb-6">
+    Are you sure you want to delete "{{ article.title }}"?
+  </p>
 
-<a href="{% url 'home' %}">No, take me back</a>
+  <form method="POST" class="flex items-center gap-4">
+    <button type="submit" class="button danger">Yes, delete it</button>
+    <a href="{% url 'home' %}" class="button secondary">
+      <!-- Inline the SVG directly and dynamically pass the class -->
+      <svg
+        class="inline-block w-4 h-4 mr-2"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path d="m12 19-7-7 7-7" />
+        <path d="M19 12H5" />
+      </svg>
+      No, take me back
+    </a>
+  </form>
+</main>
+
 {% endblock content %}
