--- a/templates/app/article_create.html
+++ b/templates/app/article_create.html
@@ -1,18 +1,53 @@
 {% extends "app/base.html" %} {% block content %}
 
-<h1>Create Article</h1>
-<form method="POST">
-  {% csrf_token %} {{ form.as_p }}
-  <button type="submit">Save</button>
+<!-- Article Creation Form -->
+<form method="POST" class="form-horizontal m-4">
+  {% csrf_token %}
+  <div class="form-group">
+    <label for="id_title" class="col-sm-2 control-label">Title</label>
+    <div class="col-sm-10">{{ form.title }}</div>
+  </div>
+
+  <div class="form-group">
+    <label for="id_content" class="col-sm-2 control-label">Content</label>
+    <div class="col-sm-10">{{ form.content }}</div>
+  </div>
+
+  <div class="form-group">
+    <label for="id_status" class="col-sm-2 control-label">Status</label>
+    <div class="col-sm-10">{{ form.status }}</div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-10 col-sm-offset-2">
+      <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+  </div>
 </form>
-<a href="{% url 'home' %}">Back to list</a>
+
+<!-- Back Link -->
+<a href="{% url 'home' %}" class="btn btn-secondary">Back to list</a>
 {% endblock content %} {% block page_js %}
 <script>
   const contentMarkdown = new EasyMDE({
     element: document.getElementById("id_content"),
     spellChecker: false,
     status: false,
-    toolbar: false,
+    toolbar: [
+      "bold",
+      "italic",
+      "strikethrough",
+      "|",
+      "quote",
+      "code",
+      "unordered-list",
+      "ordered-list",
+      "|",
+      "link",
+      "image",
+      "|",
+      "preview",
+    ],
     forceSync: true,
   });
 </script>
