--- a/static/input.css
+++ b/static/input.css
@@ -21,3 +21,7 @@
 .danger {
   @apply shadow-sm border border-red-400 text-red-800 bg-red-200 hover:bg-red-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-200;
 }
+
+.main-background {
+  @apply bg-gray-900 text-white;
+}
