--- a/templates/app/article_delete.html
+++ b/templates/app/article_delete.html
@@ -7,6 +7,7 @@
   </p>
 
   <form method="POST" class="flex items-center gap-4">
+    {% csrf_token %}
     <button type="submit" class="button danger">Yes, delete it</button>
     <a href="{% url 'home' %}" class="button secondary">
       <!-- Inline the SVG directly and dynamically pass the class -->
